--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I live in Brazil and Im on my second year of college. I usually program in Python and Javascript. My goal is to become a full-stack developer, and right now Im focusing on the server-side (Node.js). On the </p>
+						<p>I live in Brazil and Im on my second year of college. I usually program in Python and Javascript. My goal is to become a full-stack developer, and right now Im focusing on the server-side (Node.js). As a hobby I illustrate digitally and I do some game development in Unity wit 3D models made in Blender. </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
